--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/nunjucks": "^3.1.4",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
