--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@fewlines/connect-client": "^0.4.4",
     "@types/nunjucks": "^3.1.4",
     "body-parser": "^1.19.0",
+    "connect-mongo": "^4.4.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "mongodb": "^3.6.2",
     "node-fetch": "^2.6.1",
     "nunjucks": "^3.2.3",
@@ -27,7 +30,9 @@
     "test:e2e": "jest --runInBand tests/e2e"
   },
   "devDependencies": {
+    "@types/connect-mongo": "^3.1.3",
     "@types/express": "^4.17.8",
+    "@types/express-session": "^1.17.3",
     "@types/mongodb": "^3.5.27",
     "@types/node-fetch": "^2.5.7",
     "@types/slug": "^0.9.1",
